# viewfinder

./: CHANGELOG.md  LICENSE.md  README.md  cabal.project  hie.yaml  viewfinder.cabal
.github/workflows/: ci.yaml
Viewfinder/: CoordinateFormat.hs  Direction.hs  Gen.hs  Geodetic.hs  MetricDelta.hs  View.hs
app/: Main.hs
